--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="This is a demo portfolio website" />
+
     <title>Caroline Steen</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -60,7 +62,11 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="images/yoga.png"
+            alt="A preview of yoga site"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -89,12 +95,20 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="images/weather.png"
+            alt="A preview of weather site"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            alt="A preview of yogurt site"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
